--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -6,18 +6,25 @@ on:
 
 jobs:
   build:
-    name: Build
+    name: Build  
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [16.x]
-   
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm test
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build
+      run: npm run build
