--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.0.1",
     "react-spinners": "^0.5.12"
   },
   "scripts": {
