--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [ 16.x ]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - uses: actions/checkout@v1
@@ -17,15 +18,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Yarn Install
-        run: |
-          yarn install
+      - name: Install dependencies
+        run: npm install
       - name: Staging Build
-        run: |
-          yarn build
-      - name: Unit Tests
-        run: |
-          yarn test
+      - name: Build
+        run: npm run build
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
         with:
